# ref36_clFOC

can_motor_driver/: README.md  arduino.ino  launch_can_motor_node.py  package.xml  setup.py
can_motor_driver/can_motor_driver/: __init__.py  can_motor_node.py  motor_config.yaml
